# python-app

./: .dockerignore  .gitignore  Dockerfile  README.md  build.gradle  pyproject.toml  requirements.txt  settings.gradle
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  deploy.yml  test-runner.yml
src/app/: __init__.py  main.py
src/hello_poc_art/: __init__.py
src/main/python/: app.py
tests/: test_app.py  test_status.py
