[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artifact_deployment_service"
version = "1.0.0"
description = "FastAPI-based internal service for managing CI/CD artifact publishing and deployment."
requires-python = ">=3.10"

[project.dependencies]
fastapi = "==0.110.0"
uvicorn = { version = "==0.29.0", extras = ["standard"] }
requests = "==2.31.0"
httpx = "==0.27.0"

[project.optional-dependencies]
test = [
    "pytest==7.4.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
