[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artifact_deployment_service"
version = "1.0.0"
description = "FastAPI-based internal service for managing CI/CD artifact publishing and deployment."
requires-python = ">=3.10"
authors = [{ name = "Your Name", email = "your@email.com" }]
readme = "README.md"
license = { text = "MIT" }
keywords = ["fastapi", "ci-cd", "deployment"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License"
]

[project.dependencies]
fastapi = "==0.110.0"
uvicorn = { version = "==0.29.0", extras = ["standard"] }
requests = "==2.31.0"

[project.optional-dependencies]
dev = [
    "pytest==7.4.0",
    "httpx==0.27.0"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
